# thinkagain

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  REMOTE_SETUP.md  benchmark_overhead.py  pyproject.toml  test_bundle_unpack.py
.github/: FUNDING.yml
.github/workflows/: codspeed.yml  test.yml  tests.yml
examples/: async_rag_example.py  autoscaling_demo.py  bundle_example.py  demo.py  deployment.py  distributed_example.py  graph_debugging.py  graph_examples.py  grpc_remote_example.py  minimal_demo.py  multinode_scaling_demo.py  new_distributed_api_demo.py  node_class_decorator_example.py  optimizer_demo.py  pipeline_examples.py  rag_with_pipeline.py  remote_deployment_demo.py  serve_openai_demo.py  service_example.py  shared_replicas.py  shared_workers.py  simple_rag.py  simple_sync_example.py  stateful_replica_patterns.py  streaming_llm_demo.py  subgraph_composition.py
examples/agents/: README.md  simple_agent.py
src/: __init__.py
src/core/: __init__.py  async_pipeline.py  context.py  parallel.py  pipeline.py  worker.py
tests/: bench_core.py  bench_declarative.py  bench_distributed.py  conftest.py  test_agents.py  test_async_worker.py  test_bundle_unpack.py  test_core.py  test_core_tracing.py  test_declarative.py  test_distributed.py  test_execution_cycles.py  test_self_reference.py  test_streaming.py
thinkagain/: __init__.py  __init__.pyi  serve.py  session.py
thinkagain/agents/: __init__.py  agent.py  agent_nodes.py  llm.py  llms.py  protocols.py  providers.py  state.py  tools.py
thinkagain/api/: __init__.py  actor.py  node.py  op.py  replica.py  (+3 more)
(+120 files in other folders)
