[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkagain"
dynamic = ["version"]
description = "Minimal framework for declarative AI pipelines with lazy materialization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "ThinkAgain contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/BDHU/thinkagain"
Repository = "https://github.com/BDHU/thinkagain"
Issues = "https://github.com/BDHU/thinkagain/issues"

[tool.hatch.version]
path = "thinkagain/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["thinkagain"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "LICENSE",
  "examples",
  "thinkagain",
]
